refactor: refactored component arch to optimize modularity

--- a/client/index.html
+++ b/client/index.html
@@ -3,22 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Gitão :)</title>
+  <title>GITÃO :)</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      background-color: #E8F2F9;
-      font-size: 16px;
-    }
-    body * {
-      box-sizing: border-box;
-      font-family: 'Hind', sans-serif;
-    }
-  </style>
 </head>
 <body>
   <div id="root"></div>
-  <script src="index.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
